Update: 把全域函數 包含資料夾位置、指定時間區間 等分開列

--- a/TicketAnalysisCode.ipynb
+++ b/TicketAnalysisCode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "51662c73",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "873ae102",
    "metadata": {},
    "outputs": [],
@@ -261,25 +261,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "c1428724",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 00_Setup 所有全域函數\n",
+    "\n",
+    "# 1.) 設定篩選日期區間\n",
+    "selectdate_start = '2024-10-01'\n",
+    "selectdate_end = '2024-11-30'\n",
+    "\n",
+    "# 2.) 建立輸出資料夾\n",
+    "selecttime_ticket_folder = create_folder(os.path.join(os.getcwd(), '..', '01_初步篩選整理票證', '01_指定時間區間票證資料')) # 建立01-01 指定時間區間票證資料夾\n",
+    "checkok_ticketfolder = create_folder(os.path.join(os.getcwd(), '..', '01_初步篩選整理票證', '02_過濾可用票證資料')) # 建立01-02 過濾可用票證資料夾\n",
+    "check_stopfolder = create_folder(os.path.join(os.getcwd(), '..', '01_初步篩選整理票證', '03_所有使用到的點位')) # 建立01-03 所有使用到的點位資料夾\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "4b02f38d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 預處理01: 指定時間區間票證資料切分\n",
-    "\n",
-    "selectdate_start = '2024-10-01'\n",
-    "selectdate_end = '2024-11-30'\n",
-    "\n",
-    "selecttime_ticket_folder = create_folder(os.path.join(os.getcwd(), '..', '01_初步篩選整理票證', '01_指定時間區間票證資料'))\n",
-    "\n",
-    "files = [\n",
-    "         r'D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\2024_2025\\公路客運電子票證資料(TO1A)\\公路客運電子票證資料(TO1A).csv', \n",
-    "         r'D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\2024_2025\\新北市公車電子票證資料(TO1A)\\新北市公車電子票證資料(TO1A).csv', \n",
-    "         r'D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\2024_2025\\桃園市公車電子票證資料(TO1A)\\桃園市公車電子票證資料(TO1A).csv', \n",
-    "         r'D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\2024_2025\\桃園市公車電子票證資料(TO2A)\\桃園市公車電子票證資料(TO2A).csv'\n",
-    "         ]\n",
-    "for file in files:\n",
+    "orginal_ticket_files = [\n",
+    "                        r'D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\2024_2025\\公路客運電子票證資料(TO1A)\\公路客運電子票證資料(TO1A).csv', \n",
+    "                        r'D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\2024_2025\\新北市公車電子票證資料(TO1A)\\新北市公車電子票證資料(TO1A).csv', \n",
+    "                        r'D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\2024_2025\\桃園市公車電子票證資料(TO1A)\\桃園市公車電子票證資料(TO1A).csv', \n",
+    "                        r'D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\2024_2025\\桃園市公車電子票證資料(TO2A)\\桃園市公車電子票證資料(TO2A).csv'\n",
+    "                        ]\n",
+    "for file in orginal_ticket_files:\n",
     "        output = filter_ticket_data(\n",
     "                    filepath = file,\n",
     "                    infodate_column = 'InfoDate',\n",
@@ -290,7 +303,7 @@
     "                    chunksize = 1000\n",
     "                )\n",
     "        \n",
-    "        print(\"輸出路徑：\", output)\n"
+    "        print(\"輸出路徑：\", output)"
    ]
   },
   {
@@ -301,73 +314,72 @@
    "outputs": [],
    "source": [
     "# 預處理02: 指定時間區間票證資料切分\n",
-    "check_datafolder = create_folder(os.path.join(os.getcwd(), '..', '01_初步篩選整理票證', '02_過濾可用票證資料'))\n",
-    "files = findfiles(selecttime_ticket_folder, filetype='.csv', recursive=False)\n",
-    "correctratelog_path = os.path.join(check_datafolder, '客運票證資料正確率記錄.txt')\n",
+    "selecttime_ticket_files = findfiles(selecttime_ticket_folder, filetype='.csv', recursive=False)\n",
+    "correctratelog_path = os.path.join(checkok_ticketfolder, '客運票證資料正確率記錄.txt')\n",
     "\n",
     "chunksize = 10000   \n",
     "\n",
-    "# for file in files:\n",
+    "for file in selecttime_ticket_files:\n",
     "\n",
-    "#     print(f\"\\n=== 開始處理：{file} ===\")\n",
+    "    print(f\"\\n=== 開始處理：{file} ===\")\n",
     "\n",
-    "#     # 統計資料累加器\n",
-    "#     total_stat = Counter()\n",
+    "    # 統計資料累加器\n",
+    "    total_stat = Counter()\n",
     "\n",
-    "#     # 輸出清洗後 CSV 的路徑\n",
-    "#     cleaned_output_path = os.path.join(\n",
-    "#         check_datafolder,\n",
-    "#         os.path.basename(file).replace(\".csv\", \"_cleaned.csv\")\n",
-    "#     )\n",
+    "    # 輸出清洗後 CSV 的路徑\n",
+    "    cleaned_output_path = os.path.join(\n",
+    "        checkok_ticketfolder,\n",
+    "        os.path.basename(file).replace(\".csv\", \"_cleaned.csv\")\n",
+    "    )\n",
     "\n",
-    "#     first_chunk = True  # 控制 header\n",
+    "    first_chunk = True  # 控制 header\n",
     "\n",
-    "#     # 分批讀取整個檔案\n",
-    "#     for chunk in pd.read_csv(file, chunksize=chunksize, encoding='utf-8-sig'):\n",
+    "    # 分批讀取整個檔案\n",
+    "    for chunk in pd.read_csv(file, chunksize=chunksize, encoding='utf-8-sig'):\n",
     "\n",
-    "#         # 跑你自己的清洗函數\n",
-    "#         cleaned_df, correct_stat_info, correctrate_chunk = tickets_cleaning(\n",
-    "#             chunk,\n",
-    "#             on_time_column='BoardingTime',\n",
-    "#             off_time_column='DeboardingTime',\n",
-    "#             getonstop='BoardingStopUID',\n",
-    "#             getoffstop='DeboardingStopUID',\n",
-    "#             getonseq='BoardingStopSequence',\n",
-    "#             getoffseq='DeboardingStopSequence'\n",
-    "#         )\n",
+    "        # 跑你自己的清洗函數\n",
+    "        cleaned_df, correct_stat_info, correctrate_chunk = tickets_cleaning(\n",
+    "            chunk,\n",
+    "            on_time_column='BoardingTime',\n",
+    "            off_time_column='DeboardingTime',\n",
+    "            getonstop='BoardingStopUID',\n",
+    "            getoffstop='DeboardingStopUID',\n",
+    "            getonseq='BoardingStopSequence',\n",
+    "            getoffseq='DeboardingStopSequence'\n",
+    "        )\n",
     "\n",
-    "#         # 累加統計\n",
-    "#         total_stat.update(correct_stat_info)\n",
+    "        # 累加統計\n",
+    "        total_stat.update(correct_stat_info)\n",
     "\n",
-    "#         # 將清洗後的 cleaned_df 分批寫入新 CSV\n",
-    "#         if not cleaned_df.empty:\n",
-    "#             cleaned_df.to_csv(\n",
-    "#                 cleaned_output_path,\n",
-    "#                 mode='w' if first_chunk else 'a',\n",
-    "#                 header=first_chunk,\n",
-    "#                 index=False,\n",
-    "#                 encoding='utf-8-sig'\n",
-    "#             )\n",
-    "#             first_chunk = False\n",
+    "        # 將清洗後的 cleaned_df 分批寫入新 CSV\n",
+    "        if not cleaned_df.empty:\n",
+    "            cleaned_df.to_csv(\n",
+    "                cleaned_output_path,\n",
+    "                mode='w' if first_chunk else 'a',\n",
+    "                header=first_chunk,\n",
+    "                index=False,\n",
+    "                encoding='utf-8-sig'\n",
+    "            )\n",
+    "            first_chunk = False\n",
     "\n",
-    "#     # -------- 整份 CSV 的整體正確率 --------\n",
-    "#     original_count = total_stat.get('原始票證數量', 0)\n",
-    "#     canuse_count   = total_stat.get('資料正常', 0)\n",
+    "    # -------- 整份 CSV 的整體正確率 --------\n",
+    "    original_count = total_stat.get('原始票證數量', 0)\n",
+    "    canuse_count   = total_stat.get('資料正常', 0)\n",
     "\n",
-    "#     if original_count > 0:\n",
-    "#         final_correctrate = round(canuse_count / original_count * 100, 2)\n",
-    "#     else:\n",
-    "#         final_correctrate = 0.0\n",
+    "    if original_count > 0:\n",
+    "        final_correctrate = round(canuse_count / original_count * 100, 2)\n",
+    "    else:\n",
+    "        final_correctrate = 0.0\n",
     "\n",
-    "#     # -------- 寫入 TXT（CSV 格式） --------\n",
-    "#     export_ticketcorrectrate(\n",
-    "#         filename=file,\n",
-    "#         output=dict(total_stat),\n",
-    "#         correctrate=final_correctrate,\n",
-    "#         txt_path=correctratelog_path\n",
-    "#     )\n",
+    "    # -------- 寫入 TXT（CSV 格式） --------\n",
+    "    export_ticketcorrectrate(\n",
+    "        filename=file,\n",
+    "        output=dict(total_stat),\n",
+    "        correctrate=final_correctrate,\n",
+    "        txt_path=correctratelog_path\n",
+    "    )\n",
     "\n",
-    "#     print(f\"清洗後資料輸出：{cleaned_output_path}\")"
+    "    print(f\"清洗後資料輸出：{cleaned_output_path}\")"
    ]
   },
   {
@@ -375,12 +387,65 @@
    "execution_count": null,
    "id": "2f70d87d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_13416\\1081235363.py:6: DtypeWarning: Columns (7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(file, encoding='utf-8-sig')\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_13416\\1388729293.py:214: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dfboarding[select_columns + boarding_stop_columns] = dfboarding[select_columns + boarding_stop_columns].fillna('-99')\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_13416\\1388729293.py:219: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dfdeboarding[select_columns + deboarding_stop_columns] = dfdeboarding[select_columns+ deboarding_stop_columns].fillna('-99')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "站點資料輸出：d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\01_初步篩選整理票證\\03_所有使用到的點位\\公路客運電子票證資料(TO1A)_2024-10-01_to_2024-11-30_cleaned_stops.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_13416\\1388729293.py:214: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dfboarding[select_columns + boarding_stop_columns] = dfboarding[select_columns + boarding_stop_columns].fillna('-99')\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_13416\\1388729293.py:219: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dfdeboarding[select_columns + deboarding_stop_columns] = dfdeboarding[select_columns+ deboarding_stop_columns].fillna('-99')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "站點資料輸出：d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\01_初步篩選整理票證\\03_所有使用到的點位\\新北市公車電子票證資料(TO1A)_2024-10-01_to_2024-11-30_cleaned_stops.csv\n"
+     ]
+    }
+   ],
    "source": [
     "# 預處理03: 確認所有站點的經緯度在TDX都可以被核對出來\n",
-    "check_stopfolder = create_folder(os.path.join(os.getcwd(), '..', '01_初步篩選整理票證', '03_所有使用到的點位'))\n",
     "\n",
-    "files = findfiles(check_datafolder)\n",
+    "\n",
+    "files = findfiles(checkok_ticketfolder)\n",
     "for file in files:\n",
     "    df = pd.read_csv(file, encoding='utf-8-sig')\n",
     "    stop = get_stop_fromtickets(df)\n",
@@ -402,6 +467,8 @@
     "# 讀取路網\n",
     "stop_gdf = gpd.read_file(r'D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\其他分析資料\\公路客運站點資料\\公路客運站點資料.shp') \n",
     "df = pd.read_csv(r'D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\01_初步篩選整理票證\\03_所有使用到的點位\\公路客運電子票證資料(TO1A)_2024-10-01_to_2024-11-30_cleaned_stops.csv')\n",
+    "\n",
+    "# 第一次比對：比對StopUID與StopName\n",
     "dfcount = pd.merge(df, stop_gdf[['StopUID', 'StopName', 'Lon', 'Lat']].drop_duplicates(subset=['StopUID', 'StopName']), on = ['StopUID', 'StopName'], how = 'left')\n",
     "total = df['Count'].sum()\n",
     "abnormal = dfcount[(dfcount['Lon'].isna()) | (dfcount['Lat'].isna())]['Count'].sum()\n",
@@ -409,7 +476,9 @@
     "\n",
     "print('總共有幾筆資料', f\"{total:,}\")\n",
     "print('沒有對應經緯度座標的資料異常數量', f\"{abnormal:,}\")\n",
-    "print('影響比例', f\"{abnormal / total:.4%}\")"
+    "print('影響比例', f\"{abnormal / total:.4%}\")\n",
+    "\n",
+    "# 第二次比對：只比對StopUID\n"
    ]
   },
   {
@@ -430,7 +499,7 @@
    "outputs": [],
    "source": [
     "# # 預處理04: 確認資料各票種、各路線、平假日、起點、迄點筆數\n",
-    "# files = findfiles(check_datafolder)\n",
+    "# files = findfiles(checkok_ticketfolder)\n",
     "# file = files[2] # 我先只指定一個檔案來跑\n",
     "# df = pd.read_csv(file, encoding='utf-8-sig')\n",
     "# df['BoardingTime'] = pd.to_datetime(df['BoardingTime'], errors='coerce')\n",
