fix : 修正讀取TDX金鑰的方式，並提供批次處理

--- a/01_TDX資料下載.ipynb
+++ b/01_TDX資料下載.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "cb00210c",
    "metadata": {},
    "outputs": [],
@@ -18,6 +18,9 @@
     "import os\n",
     "import requests\n",
     "import json\n",
+    "\n",
+    "from datetime import datetime # 輸出下載日期用\n",
+    "import time # 下載間隔，避免短時間下載被拒絕\n",
     "\n",
     "\n",
     "def tdx_data_download(app_id, app_key, url, output_folder, output_file_name):\n",
@@ -59,29 +62,83 @@
     "        f.write(data_response.text)\n",
     "\n",
     "    print(f\"資料已下載並存儲到 {output_path} 中。\")\n",
-    "    return output_path\n"
+    "    return output_path\n",
+    "\n",
+    "def create_folder(folder_name):\n",
+    "    \"\"\"建立資料夾\"\"\"\n",
+    "    if not os.path.exists(folder_name):\n",
+    "        os.makedirs(folder_name)\n",
+    "    return os.path.abspath(folder_name)\n",
+    "\n",
+    "def get_app_credentials(file_path):\n",
+    "    \"\"\"從設定檔案讀取 TDX 的 app_id 和 app_key\"\"\"\n",
+    "    import pandas as pd\n",
+    "    # 設定檔案路徑\n",
+    "    file_path = r\"D:\\常用Tool\\tdx帳密.txt\"  #需存於程式碼相同資料夾中\n",
+    "    # 讀取文件內容\n",
+    "    with open(file_path, 'r', encoding='utf-8') as file:\n",
+    "        file_content = file.read()\n",
+    "    path_dict = {}\n",
+    "    for line in file_content.strip().split('\\n'):\n",
+    "        key, value = line.split('=')\n",
+    "        path_dict[key.strip()] = value.strip()\n",
+    "        # path_dict[key.strip()] = value.strip().strip(\"'\")\n",
+    "    # 將字典轉換為DataFrame\n",
+    "    info_table = pd.DataFrame(list(path_dict.items()), columns=['Item', 'Value'])\n",
+    "\n",
+    "    app_id = info_table[info_table['Item'] == 'app_id']['Value'].iloc[0]\n",
+    "    app_key = info_table[info_table['Item'] == 'app_key']['Value'].iloc[0]\n",
+    "\n",
+    "    return app_id, app_key\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8fe57d3",
+   "id": "e4bb17b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "資料已下載並存儲到 d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\00_TDX資料下載\\01公車站序資料\\公車站序資料_新北市_2025-11-21.xml 中。\n",
+      "資料已下載並存儲到 d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\00_TDX資料下載\\01公車站序資料\\公車站序資料_臺北市_2025-11-21.xml 中。\n",
+      "資料已下載並存儲到 d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\00_TDX資料下載\\01公車站序資料\\公車站序資料_基隆市_2025-11-21.xml 中。\n",
+      "資料已下載並存儲到 d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\00_TDX資料下載\\01公車站序資料\\公車站序資料_桃園市_2025-11-21.xml 中。\n"
+     ]
+    }
+   ],
+   "source": [
+    "app_id, app_key = get_app_credentials(r\"D:\\常用Tool\\tdx帳密.txt\") # 讀取TDX帳密\n",
+    "busstopseq_folder = create_folder(os.path.join(os.getcwd(), '..', \"00_TDX資料下載\", \"01公車站序資料\"))\n",
+    "\n",
+    "selectcity = {'新北市':'NewTaipei', '臺北市':'Taipei', '基隆市':'Keelung', '桃園市':'Taoyuan'}\n",
+    "downloaddate = datetime.today().strftime(\"%Y-%m-%d\")\n",
+    "\n",
+    "for city, city_en in selectcity.items():\n",
+    "    url = f\"https://tdx.transportdata.tw/api/basic/v2/Bus/StopOfRoute/City/{city_en}?%24format=XML\"\n",
+    "    output_folder = busstopseq_folder\n",
+    "    output_file_name = f\"公車站序資料_{city}_{downloaddate}.xml\"\n",
+    "    tdx_data_download(\n",
+    "        app_id = app_id,\n",
+    "        app_key = app_key,\n",
+    "        url = url,\n",
+    "        output_folder = output_folder,\n",
+    "        output_file_name = output_file_name\n",
+    "        )\n",
+    "    \n",
+    "    time.sleep(60)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e62664bd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "app_id = \"kjchang-6489e9f0-ab90-484a\"\n",
-    "app_key = \"25433507-9fb6-4699-bc22-7a2c1b25fd0e\"\n",
-    "url = \n",
-    "output_folder = \"桃園站位資料\",\n",
-    "output_file_name = \n",
-    "\n",
-    "tdx_data_download(\n",
-    "    app_id = ,\n",
-    "    app_key = ,\n",
-    "    url = \"https://tdx.transportdata.tw/api/basic/v2/Bus/DisplayStopOfRoute/City/Taoyuan?%24format=XML\",\n",
-    "    output_folder = \"桃園站位資料\",\n",
-    "    output_file_name = \"taoyuan_displaystopofroute_data.xml\"\n",
-    "    )\n"
+    "# "
    ]
   }
  ],
