fix : 新增下載公車現型shp

--- a/01_TDX資料下載.ipynb
+++ b/01_TDX資料下載.ipynb
@@ -97,29 +97,36 @@
    "execution_count": null,
    "id": "e4bb17b0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "資料已下載並存儲到 d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\00_TDX資料下載\\01公車站序資料\\公車站序資料_新北市_2025-11-21.xml 中。\n",
-      "資料已下載並存儲到 d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\00_TDX資料下載\\01公車站序資料\\公車站序資料_臺北市_2025-11-21.xml 中。\n",
-      "資料已下載並存儲到 d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\00_TDX資料下載\\01公車站序資料\\公車站序資料_基隆市_2025-11-21.xml 中。\n",
-      "資料已下載並存儲到 d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\00_TDX資料下載\\01公車站序資料\\公車站序資料_桃園市_2025-11-21.xml 中。\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "app_id, app_key = get_app_credentials(r\"D:\\常用Tool\\tdx帳密.txt\") # 讀取TDX帳密\n",
+    "app_id, app_key = get_app_credentials(r\"D:\\常用Tool\\tdx帳密.txt\") # 讀取TDX帳密 也可以自己手key in\n",
     "busstopseq_folder = create_folder(os.path.join(os.getcwd(), '..', \"00_TDX資料下載\", \"01公車站序資料\"))\n",
+    "busroute_folder = create_folder(os.path.join(os.getcwd(), '..', \"00_TDX資料下載\", \"02公車路線資料\"))\n",
     "\n",
     "selectcity = {'新北市':'NewTaipei', '臺北市':'Taipei', '基隆市':'Keelung', '桃園市':'Taoyuan'}\n",
     "downloaddate = datetime.today().strftime(\"%Y-%m-%d\")\n",
     "\n",
+    "'''下載公車站序資料'''\n",
     "for city, city_en in selectcity.items():\n",
     "    url = f\"https://tdx.transportdata.tw/api/basic/v2/Bus/StopOfRoute/City/{city_en}?%24format=XML\"\n",
     "    output_folder = busstopseq_folder\n",
     "    output_file_name = f\"公車站序資料_{city}_{downloaddate}.xml\"\n",
+    "    tdx_data_download(\n",
+    "        app_id = app_id,\n",
+    "        app_key = app_key,\n",
+    "        url = url,\n",
+    "        output_folder = output_folder,\n",
+    "        output_file_name = output_file_name\n",
+    "        )\n",
+    "    \n",
+    "    time.sleep(60)\n",
+    "\n",
+    "'''下載公車路線shp資料'''\n",
+    "for city, city_en in selectcity.items():\n",
+    "    # url = f\"https://tdx.transportdata.tw/api/basic/v2/Bus/StopOfRoute/City/{city_en}?%24format=XML\"\n",
+    "    url = f\"https://tdx.transportdata.tw/api/basic/v2/Bus/Shape/City/{city_en}?%24format=XML\"\n",
+    "    output_folder = busroute_folder\n",
+    "    output_file_name = f\"市區公車路線資料_{city}_{downloaddate}.xml\"\n",
     "    tdx_data_download(\n",
     "        app_id = app_id,\n",
     "        app_key = app_key,\n",
