fix:修正黏貼即拆分函數

--- a/02_公車路線shp拆分.ipynb
+++ b/02_公車路線shp拆分.ipynb
@@ -2,15 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "23e79f3d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import xml.etree.ElementTree as ET\n",
     "import pandas as pd\n",
-    "import os \n",
     "import geopandas as gpd\n",
+    "import os \n",
+    "from shapely import wkt # for WKT 轉幾何物件\n",
+    "from shapely.geometry import LineString, Point\n",
+    "from shapely.ops import substring\n",
     "\n",
     "# 00 Setup\n",
     "def findfiles(filefolderpath, filetype='.csv', recursive=True):\n",
@@ -42,6 +45,27 @@
     "                filelist.append(file_path)\n",
     "\n",
     "    return filelist\n",
+    "\n",
+    "def dataframe_to_point(df, lon_col, lat_col, crs=\"EPSG:4326\", target_crs=\"EPSG:3826\"):\n",
+    "    '''\n",
+    "    Parameters:\n",
+    "    df (dataframe) : 含經緯度座標欄位的dataframe\n",
+    "    lon_col (str) : 緯度欄位\n",
+    "    Lat_col (str) : 經度欄位\n",
+    "    crs (str) : 目前經緯度座標的座標系統，常用的為4326(WGS84)、3826(TWD97)\n",
+    "    target_crs：目標轉換的座標系統\n",
+    "    '''\n",
+    "\n",
+    "    # from shapely.geometry import Point\n",
+    "    # import pandas as pd\n",
+    "    # import geopandas as gpd\n",
+    "    # Create Point geometries from the longitude and latitude columns\n",
+    "    geometry = [Point(xy) for xy in zip(df[lon_col], df[lat_col])]\n",
+    "    # Create a GeoDataFrame with the original CRS\n",
+    "    gdf = gpd.GeoDataFrame(df, geometry=geometry, crs=crs)\n",
+    "    # Convert the GeoDataFrame to the target CRS\n",
+    "    gdf = gdf.to_crs(epsg=target_crs.split(\":\")[1])\n",
+    "    return gdf\n",
     "\n",
     "# 01 讀取TDX資料\n",
     "def read_bus_stop_of_route_xml(xml_path: str) -> pd.DataFrame:\n",
@@ -157,15 +181,130 @@
     "    # 轉成 DataFrame\n",
     "    df = pd.DataFrame(records)\n",
     "\n",
-    "    return df"
+    "    return df\n",
+    "\n",
+    "\n",
+    "# 01 檢查路線\n",
+    "\n",
+    "# 02 拆分路線\n",
+    "def snap_points_to_line(stops_gdf, routes_gdf, \n",
+    "                        route_id_col, route_direction_col, \n",
+    "                        seq_id_col, seq_direction_col, \n",
+    "                        seq_lat_col, seq_lng_col):\n",
+    "    \"\"\"\n",
+    "    將公車站點 (stops_gdf) 投影到公車路線 (routes_gdf) 上，並動態帶入欄位名稱。\n",
+    "    Parameters:\n",
+    "        stops_gdf (GeoDataFrame): 包含公車站點的 GeoDataFrame。\n",
+    "        routes_gdf (GeoDataFrame): 包含公車路線的 GeoDataFrame。\n",
+    "        route_id_col (str): 路線名稱欄位名稱。\n",
+    "        route_direction_col (str): 路線方向欄位名稱。\n",
+    "        seq_id_col (str): 站點路線名稱欄位名稱。\n",
+    "        seq_direction_col (str): 站點方向欄位名稱。\n",
+    "        seq_lat_col (str): 站點緯度欄位名稱。\n",
+    "        seq_lng_col (str): 站點經度欄位名稱。\n",
+    "    Returns:\n",
+    "        GeoDataFrame: 更新後的公車站點 GeoDataFrame，其中 geometry 已投影到路線。\n",
+    "    \"\"\"\n",
+    "    snapped_points = []\n",
+    "\n",
+    "    for _, stop in stops_gdf.iterrows():\n",
+    "        # 找到與站點路線名稱和方向相符的路線\n",
+    "        matching_route = routes_gdf[(routes_gdf[route_id_col] == stop[seq_id_col]) & \n",
+    "                                    (routes_gdf[route_direction_col] == stop[seq_direction_col])]\n",
+    "\n",
+    "        if not matching_route.empty:\n",
+    "            # 取出該路線的 geometry\n",
+    "            line = matching_route.iloc[0].geometry\n",
+    "            # 計算站點投影到該路線的最近點\n",
+    "            snapped_point = line.interpolate(line.project(stop.geometry))\n",
+    "            snapped_points.append(snapped_point)\n",
+    "        else:\n",
+    "            # 如果沒有匹配的路線，保持原點\n",
+    "            snapped_points.append(stop.geometry)\n",
+    "\n",
+    "    # 更新站點的 geometry\n",
+    "    stops_gdf = stops_gdf.copy()\n",
+    "    stops_gdf['geometry'] = snapped_points\n",
+    "    stops_gdf[seq_lat_col] = stops_gdf.geometry.y\n",
+    "    stops_gdf[seq_lng_col] = stops_gdf.geometry.x\n",
+    "    return stops_gdf\n",
+    "\n",
+    "def split_routes(busroute_select, \n",
+    "                 seq_select,\n",
+    "                 route_id_col='RouteName',\n",
+    "                 route_direction_col='Direction',\n",
+    "                 seq_id_col='RouteName',\n",
+    "                 seq_direction_col='Direction',\n",
+    "                 seq_seq_col='Seq',\n",
+    "                 seq_lat_col='Lat',\n",
+    "                 seq_lng_col='Lon'):\n",
+    "    \"\"\"\n",
+    "    將公車路線 (busroute_select) 依據提供的站序 (seq_select) 上，分為數段的shp。\n",
+    "    Parameters:\n",
+    "        busroute_select (GeoDataFrame): 包含公車路線名稱的 GeoDataFrame。\n",
+    "        seq_select (DataFrame): 包含公車路線站序的 DataFrame。\n",
+    "        seq_routename_col (str): 路線名稱欄位名稱。\n",
+    "        seq_direction_col (str): 路線方向欄位名稱。\n",
+    "        seq_seq_col (str): 站點方向欄位名稱。\n",
+    "        seq_lat_col (str): 站點緯度欄位名稱。\n",
+    "        seq_lng_col (str): 站點經度欄位名稱。\n",
+    "    Returns:\n",
+    "        GeoDataFrame: 更新後的公車站點 GeoDataFrame，其中 geometry 已投影到路線。\n",
+    "    \"\"\"\n",
+    "\n",
+    "    output = []\n",
+    "\n",
+    "    for _, route in busroute_select.iterrows():\n",
+    "        route_id = route[route_id_col]\n",
+    "        direction = route[route_direction_col]\n",
+    "        geometry = route['geometry']\n",
+    "\n",
+    "        # 過濾對應路線與方向的站點\n",
+    "        stops = seq_select[(seq_select[seq_id_col] == route_id) & \n",
+    "                           (seq_select[seq_direction_col] == direction)].sort_values(seq_seq_col)\n",
+    "\n",
+    "        # 確保站點順序對應於路線\n",
+    "        stop_coords = [(row[seq_lng_col], row[seq_lat_col]) for _, row in stops.iterrows()]\n",
+    "\n",
+    "        for i in range(len(stop_coords) - 1):\n",
+    "            start_point = Point(stop_coords[i])\n",
+    "            end_point = Point(stop_coords[i + 1])\n",
+    "\n",
+    "            # 找到站點在路線中的比例位置\n",
+    "            start_distance = geometry.project(start_point)\n",
+    "            end_distance = geometry.project(end_point)\n",
+    "\n",
+    "            # 提取路線幾何分段\n",
+    "            segment = substring(geometry, start_distance, end_distance)\n",
+    "\n",
+    "            output.append({\n",
+    "                'ID': route_id,\n",
+    "                'Direction': direction,\n",
+    "                'StartSeq': stops.iloc[i][seq_seq_col],\n",
+    "                'EndSeq': stops.iloc[i + 1][seq_seq_col],\n",
+    "                'geometry': segment\n",
+    "            })\n",
+    "\n",
+    "    return gpd.GeoDataFrame(output)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4658bda7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_1352\\3837998952.py:132: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
+      "  df[col] = pd.to_numeric(df[col], errors=\"ignore\")\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_1352\\3837998952.py:135: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
+      "  df[col] = pd.to_numeric(df[col], errors=\"ignore\")\n"
+     ]
+    }
+   ],
    "source": [
     "# 01-01 讀取站序xml\n",
     "\n",
@@ -185,42 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6f2804b9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "busstopseq_folder = os.path.join(os.getcwd(), '..', \"00_TDX資料下載\", \"01公車站序資料\")\n",
-    "xml_files = findfiles(busstopseq_folder, filetype='.xml', recursive=False)\n",
-    "xmlfile = xml_files[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "86997d89",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xmlfile"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7997082a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 02 讀取shp和seq比對是否每個路線都有對應的站序資料\n",
-    "\n",
-    "route_gdf = gpd.read_file(r\"D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\其他分析資料\\市區公車路線資料\\新北市公車路線\\B1F0230003V089.shp\")\n",
-    "df_seq = pd.read_csv(r'D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\00_TDX資料下載\\01公車站序資料\\公車站序資料_新北市_2025-11-21.csv')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e0a78a03",
    "metadata": {},
    "outputs": [],
@@ -228,27 +332,116 @@
     "# 01-02 讀取路線xml資料\n",
     "busroute_folder = os.path.join(os.getcwd(), '..', \"00_TDX資料下載\", \"02公車路線資料\")\n",
     "xml_files = findfiles(busroute_folder, filetype='.xml', recursive=False)\n",
-    "xmlfile = xml_files[0]"
+    "for xmlfile in xml_files:\n",
+    "    df = read_bus_shape_of_route_xml(xmlfile)\n",
+    "    df.to_csv(xmlfile.replace('.xml', '.csv'), index=False, encoding='utf-8-sig')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "164ae355",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_seq = pd.read_csv(r\"D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\00_TDX資料下載\\01公車站序資料\\公車站序資料_新北市_2025-11-21.csv\")\n",
+    "df_route = pd.read_csv(r\"D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\00_TDX資料下載\\02公車路線資料\\市區公車路線資料_新北市_2025-11-21.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c00e0663",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "只在 df_route 出現的 SubRouteUID：\n",
+      "1\n",
+      "\n",
+      "只在 df_seq 出現的 SubRouteUID：\n",
+      "801\n",
+      "\n",
+      "兩邊都有的 SubRouteUID：\n",
+      "149\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 取出兩邊的 SubRouteUID（轉成 set 好比較）\n",
+    "route_set = set(df_route['SubRouteUID'])\n",
+    "seq_set = set(df_seq['SubRouteUID'])\n",
+    "\n",
+    "only_in_route = route_set - seq_set\n",
+    "only_in_seq = seq_set - route_set\n",
+    "in_both = route_set & seq_set\n",
+    "\n",
+    "print(\"只在 df_route 出現的 SubRouteUID：\")\n",
+    "print(len(only_in_route))\n",
+    "\n",
+    "print(\"\\n只在 df_seq 出現的 SubRouteUID：\")\n",
+    "print(len(only_in_seq))\n",
+    "\n",
+    "print(\"\\n兩邊都有的 SubRouteUID：\")\n",
+    "print(len(in_both))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "0dda771e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 03 黏貼站序道路線上\n",
+    "# 將 Geometry 欄位的 WKT 轉為 shapely geometry\n",
+    "df_route[\"Geometry\"] = df_route[\"Geometry\"].apply(wkt.loads)\n",
+    "\n",
+    "# 建立 GeoDataFrame\n",
+    "gdf_route = gpd.GeoDataFrame(df_route, geometry=\"Geometry\", crs=\"EPSG:4326\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "7502ca9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_route = gdf_route[gdf_route['SubRouteUID'].isin(in_both)].reset_index(drop=True)\n",
+    "df_seq = df_seq[df_seq['SubRouteUID'].isin(in_both)].reset_index(drop=True)\n",
+    "gdf_seq = dataframe_to_point(df_seq, lon_col='PositionLon', lat_col='PositionLat', crs=\"EPSG:4326\", target_crs=\"EPSG:4326\")\n",
+    "gdf_route.rename(columns={'Geometry':'geometry'}, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67767469",
+   "id": "ae2325d7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "xmlfile"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "954fab32",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.read_csv(xmlfile)"
+    "# 把站點投影到路線上\n",
+    "gdf_snapstop = snap_points_to_line(gdf_seq, gdf_route,\n",
+    "                                    route_id_col='SubRouteUID',\n",
+    "                                    route_direction_col='Direction',\n",
+    "                                    seq_id_col='SubRouteUID',\n",
+    "                                    seq_direction_col='Direction',\n",
+    "                                    seq_lat_col='PositionLat',\n",
+    "                                    seq_lng_col='PositionLon')\n",
+    "# 用站點將路線進行拆分\n",
+    "gdf_routesegment = split_routes(gdf_route, gdf_snapstop,\n",
+    "                                route_id_col='SubRouteUID',\n",
+    "                                route_direction_col='Direction',\n",
+    "                                seq_id_col='SubRouteUID',\n",
+    "                                seq_direction_col='Direction',\n",
+    "                                seq_seq_col='StopSequence',\n",
+    "                                seq_lat_col='PositionLat',\n",
+    "                                seq_lng_col='PositionLon')\n",
+    "gdf_routesegment.rename(columns = {'ID':'SubRouteUID'}, inplace=True)\n",
+    "gdf_routesegment.to_file(r'D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\00_TDX資料下載\\Trial\\新北市拆分路網圖.shp', index=False)"
    ]
   }
  ],
